# e3nn-mlx

./: README.md  pyproject.toml
e3nn_mlx/: __init__.py
e3nn_mlx/io/: __init__.py  _cartesian_tensor.py  _spherical_tensor.py
e3nn_mlx/math/: __init__.py  _complete_basis.py  _linalg.py  _normalize_activation.py  _orthonormalize.py  _perm.py  _reduce.py  _soft_one_hot_linspace.py  _soft_unit_step.py
e3nn_mlx/nn/: __init__.py  _activation.py  _batchnorm.py  _dropout.py  _extract.py  _fc.py  _gate.py  _identity.py  _normact.py  _s2act.py  _so3act.py
e3nn_mlx/o3/: __init__.py  _angular_spherical_harmonics.py  _fft.py  _irreps.py  _legendre.py  _linear.py  _linear_equivariant.py  _linear_gradients.py  _linear_optimized.py  _norm.py  _reduce.py  _rotation.py  _s2grid.py  _so3grid.py  _specialized_kernels.py  _spherical_harmonics.py  _spherical_harmonics_optimized.py  _wigner.py
e3nn_mlx/util/: __init__.py  _argtools.py  _array_workarounds.py  _context.py  _validation.py  adaptive_optimization.py  compile.py  datatypes.py  default_type.py  jit.py  safe_linalg.py  test.py  test_equivariance.py  test_suite.py
tests-mlx/: conftest.py  defaults_test.py  requirements.txt  run_tests.py  test_activation.py  test_activation_equivariance.py  test_api_parity.py  test_basic_functionality.py  test_batchnorm.py  test_critical_functions.py  test_gate.py  test_gate_equivariance.py  test_integration.py  test_io_cpu.py  test_io_direct.py  test_io_simple.py  test_io_translation.py  test_irreps.py  test_linear_equivariance.py  test_linear_equivariant.py  test_linear_standalone.py  test_nn_io_parity.py  test_o3_behavior_parity.py  test_optimizations.py  test_spherical_harmonics_equivariance.py  test_tensor_product.py  test_tensor_product_equivariance.py  test_validation.py
tests-mlx/math/: perm_test.py  soft_one_hot_test.py
tests-mlx/nn/: activation_test.py  fc_test.py  (+1 more)
(+20 files in other folders)
